first version of trainer to automate training (#5)
* Added metrics from clu to monitor training
* Trainer has a basic events listener capability allowing listeners to
  respond to training event and intervene (e.g. early stopping)
* Trainer will optionally jit train/eval steps
* Metrics logger added that keeps track during training

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,7 @@ keywords = ['machine learning', 'e3nn-jax', 'physics']
 requires-python = '>=3.9'
 dependencies = [
     "ase",
+    "clu",
     "flax",
     "hydra-core",
     'jax',
