Added jupyter notebook cleaning pre-commit
* Also removed spurious _engine.py file that was left over from
  development
* Removed spurious notebooks
* Added pandas as dev dependency

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -37,3 +37,8 @@ repos:
     -   id: pylint
         language: system
         exclude: *exclude_files
+
+-   repo: https://github.com/srstevenson/nb-clean
+    rev: 3.2.0
+    hooks:
+    - id: nb-clean
