--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,8 +1,7 @@
 repos:
 -   repo: https://github.com/pre-commit/pre-commit-hooks
-    rev: v2.5.0
+    rev: v4.6.0
     hooks:
-    -   id: double-quote-string-fixer
     -   id: end-of-file-fixer
     -   id: fix-encoding-pragma
         exclude: &exclude_files >
@@ -13,26 +12,32 @@ repos:
     -   id: trailing-whitespace
 
 -   repo: https://github.com/ikamensh/flynt/
-    rev: '0.76'
+    rev: '1.0.1'
     hooks:
     -   id: flynt
 
+-   repo: https://github.com/psf/black-pre-commit-mirror
+    rev: 24.4.2
+    hooks:
+    - id: black
+      language_version: python3.10
+
 -   repo: https://github.com/pycqa/isort
-    rev: '5.12.0'
+    rev: '5.13.2'
     hooks:
     -   id: isort
 
--   repo: https://github.com/pre-commit/mirrors-yapf
-    rev: v0.32.0
-    hooks:
-    -   id: yapf
-        name: yapf
-        types: [python]
-        args: ['-i']
-        additional_dependencies: ['toml']
+#-   repo: https://github.com/pre-commit/mirrors-yapf
+#    rev: v0.32.0
+#    hooks:
+#    -   id: yapf
+#        name: yapf
+#        types: [python]
+#        args: ['-i']
+#        additional_dependencies: ['toml']
 
 -   repo: https://github.com/PyCQA/pylint
-    rev: v2.12.2
+    rev: v3.1.0
     hooks:
     -   id: pylint
         language: system
