--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,17 +73,21 @@ exclude = [
 ]
 
 [tool.flynt]
-line-length = 120
+line-length = 100
 fail-on-change = true
 
 [tool.isort]
+profile = "black"
 force_sort_within_sections = true
 include_trailing_comma = true
-line_length = 120
+line_length = 100
 multi_line_output = 3
 
 [tool.pylint.format]
-max-line-length = 120
+max-line-length = 100
+
+[tool.black]
+line-length = 100
 
 [tool.pylint.messages_control]
 disable = [
