Added shape checking decorator to gcnn
This allows GraphFunctions to log when there are recompilation causing
changes between their inputs/outputs i.e. a change of the number or
shape of arrays in the graph.  Super useful for tracking down what is
causing jax recompilation.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -106,6 +106,10 @@ disable = [
 [tool.pylint.design]
 max-locals = 20
 
+[pytest]
+log_cli = "True"
+log_cli_level = "DEBUG"
+
 [tool.pytest.ini_options]
 minversion = '6.0'
 testpaths = [
