--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -8,6 +8,7 @@ repos:
           (?x)^(
               docs/.*|
           )$
+        args: [--remove]
     -   id: mixed-line-ending
     -   id: trailing-whitespace
 
