--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,50 +1,65 @@
 repos:
--   repo: https://github.com/pre-commit/pre-commit-hooks
+  - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.6.0
     hooks:
-    -   id: end-of-file-fixer
-    -   id: fix-encoding-pragma
+      - id: end-of-file-fixer
+      - id: fix-encoding-pragma
         exclude: &exclude_files >
           (?x)^(
               docs/.*|
           )$
-        args: [--remove]
-    -   id: mixed-line-ending
-    -   id: trailing-whitespace
+        args: [ --remove ]
+      - id: mixed-line-ending
+      - id: trailing-whitespace
 
--   repo: https://github.com/ikamensh/flynt/
+  - repo: https://github.com/ikamensh/flynt/
     rev: '1.0.1'
     hooks:
-    -   id: flynt
+      - id: flynt
 
--   repo: https://github.com/psf/black-pre-commit-mirror
-    rev: 24.4.2
+  - repo: https://github.com/psf/black
+    rev: 24.8.0
     hooks:
-    - id: black
-      language_version: python3.10
+      - id: black
+        exclude: (.*)/migrations
 
--   repo: https://github.com/pycqa/isort
+  - repo: https://github.com/pycqa/flake8
+    rev: 7.1.1
+    hooks:
+      - id: flake8
+
+  - repo: https://github.com/pycqa/isort
     rev: '5.13.2'
     hooks:
-    -   id: isort
+      - id: isort
 
-#-   repo: https://github.com/pre-commit/mirrors-yapf
-#    rev: v0.32.0
-#    hooks:
-#    -   id: yapf
-#        name: yapf
-#        types: [python]
-#        args: ['-i']
-#        additional_dependencies: ['toml']
+  #-   repo: https://github.com/pre-commit/mirrors-yapf
+  #    rev: v0.32.0
+  #    hooks:
+  #    -   id: yapf
+  #        name: yapf
+  #        types: [python]
+  #        args: ['-i']
+  #        additional_dependencies: ['toml']
 
--   repo: https://github.com/PyCQA/pylint
-    rev: v3.2.3
+  - repo: https://github.com/PyCQA/pylint
+    # Configuration help can be found here:
+    # https://pylint.pycqa.org/en/latest/user_guide/installation/pre-commit-integration.html
+    rev: v3.2.6
     hooks:
-    -   id: pylint
+      - id: pylint
+        alias: pylint-with-spelling
+        stages: [ manual ]
         language: system
-        exclude: *exclude_files
+        types: [ python ]
+        require_serial: true
+        exclude:
+          (?x)^(
+          docs/.*|
+          test/.*
+          )$
 
--   repo: https://github.com/srstevenson/nb-clean
+  - repo: https://github.com/srstevenson/nb-clean
     rev: 3.3.0
     hooks:
-    - id: nb-clean
+      - id: nb-clean
