Added ability to calculated avg graph neighbours by type
Can use, e.g., the atomic number as the type to get the number of
neighbours in the graph grouped by type.  This is useful for systems
that have elements of very different sizes where, with a fixed radial
cutoff, they may have very different numbers of neighbours.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     'pytray',
     'e3nn-jax',
     "equinox",
-    "reax",
+    "reax>=0.4",
     "tensorboardX",
     "typing-extensions"
 ]
