--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "ase",
     'beartype',
     "clu",
-    "flax",
+    "flax@git+https://github.com/muhrin/flax.git@fix-1925-linen-nonstring-keys",
     "hydra-core",
     'jax',
     'jaxlib',
