Pinned some dependencies to older versions
Been having some problems with the latest version of jax and jaxtyping
so kept it pinned to older versions for now.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,14 +28,14 @@ dependencies = [
     "clu",
     "flax@git+https://github.com/muhrin/flax.git@fix-1925-linen-nonstring-keys",
     "hydra-core",
-    'jax',
+    'jax<0.6.0',
     'jaxlib',
-    'jaxtyping',
+    'jaxtyping<0.4.0',
     'jraph',
     'orbax-checkpoint',
     'pytray',
     'e3nn-jax',
-    "equinox",
+    "equinox>=0.12.0",
     "reax>=0.4",
     "tensorboardX",
     "typing-extensions"
