--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,10 +47,10 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python-version: [ '3.9', '3.10', '3.11', '3.12', '3.13' ]
+        python-version: [ '3.10', '3.11', '3.12', '3.13' ]
         include:
-          - python-version: '3.11'
-          - python-version: '3.11'
+          - python-version: '3.12'
+          - python-version: '3.12'
 
     steps:
       - uses: actions/checkout@v2
