Put upper bounds on JAX version
Previoulsy, things that were deprecated broke things, so I've just put
an upper bound and will update JAX 'major' versions manually.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,7 +27,7 @@ dependencies = [
     "clu",
     "flax@git+https://github.com/muhrin/flax.git@fix-1925-linen-nonstring-keys",
     "hydra-core",
-    'jax<0.6.0',
+    'jax<0.7.0',  # Control the JAX version, as previous updates have broken things
     'jaxlib',
     'jaxtyping<0.4.0',
     'jraph',
