--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,7 +77,7 @@ jobs:
     needs: [ pre-commit, pylint, tests ]
     # Make sure forks don't try to publish and only publish in main
     if: >
-      github.repository == 'camml-lab/reax' &&
+      github.repository == 'camml-lab/tensorial' &&
       (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
       github.event_name == 'workflow_dispatch'
     runs-on: ubuntu-latest
