--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
     "ase",
     'beartype',
     "clu",
-    "flax@git+https://github.com/google/flax.git@main",
+    "flax>=0.10.7",
     "hydra-core",
     'jax<0.7.0',  # Control the JAX version, as previous updates have broken things
     'jaxlib',
