--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     'beartype',
     "flax>=0.10.7",
     "hydra-core",
-    'jax<0.7.0',  # Control the JAX version, as previous updates have broken things
+    'jax<0.7.0', # Control the JAX version, as previous updates have broken things
     'jaxlib',
     'jaxtyping<0.4.0',
     'jraph',
@@ -34,7 +34,7 @@ dependencies = [
     'pytray',
     'e3nn-jax',
     "equinox>=0.12.0",
-    "reax>=0.4",
+    "reax>=0.5.5",
     "rich",
     "tensorboardX",
     "typing-extensions"
@@ -79,6 +79,13 @@ exclude = [
     'examples/',
     'test/',
 ]
+
+[project.entry-points."reax.plugins.metrics"]
+"atomic/num_species" = "tensorial.gcnn.atomic:NumSpecies"
+"atomic/all_atomic_numbers" = "tensorial.gcnn.atomic:AllAtomicNumbers"
+"atomic/avg_num_neighbours" = "tensorial.gcnn.atomic:AvgNumNeighbours"
+"atomic/force_std" = "tensorial.gcnn.atomic:ForceStd"
+"atomic/energy_per_atom_lstsq" = "tensorial.gcnn.atomic:EnergyPerAtomLstsq"
 
 [tool.flynt]
 line-length = 100
