--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -3,10 +3,15 @@ repos:
     rev: v5.0.0
     hooks:
       - id: end-of-file-fixer
-      - id: fix-encoding-pragma
-        args: [ --remove ]
       - id: mixed-line-ending
       - id: trailing-whitespace
+
+
+  - repo: https://github.com/asottile/pyupgrade
+    rev: v3.21.0
+    hooks:
+      - id: pyupgrade
+        args: [ --py39-plus ]
 
   - repo: https://github.com/ikamensh/flynt/
     rev: '1.0.1'
