--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,7 +34,7 @@ dependencies = [
     'pytray',
     'e3nn-jax',
     "equinox>=0.12.0",
-    "reax>=0.5.5",
+    "reax~=0.6",
     "rich",
     "tensorboardX",
     "typing-extensions"
