--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = 'flit_core.buildapi'
 name = 'tensorial'
 dynamic = ["version", "description"]
 authors = [
-    { name = 'Martin Uhrin', email = 'martin.uhrin.10@ucl.ac.uk' },
+    { name = 'Martin Uhrin', email = 'martin@digitalbaker.net' },
 ]
 readme = 'README.rst'
 license = { file = 'LICENSE.txt' }
@@ -18,6 +18,7 @@ classifiers = [
     'Programming Language :: Python :: 3.11',
     'Programming Language :: Python :: 3.12',
     'Programming Language :: Python :: 3.13',
+    'Programming Language :: Python :: 3.14',
 ]
 keywords = ['machine learning', 'e3nn-jax', 'physics']
 requires-python = '>=3.10'
@@ -153,12 +154,12 @@ split_arguments_when_comma_terminated = true
 [tool.tox]
 legacy_tox_ini = """
 [tox]
-envlist = py311
+envlist = py313
 
 [testenv]
 usedevelop = true
 
-[testenv:py{310,311,312,313}]
+[testenv:py{310,311,312,313,314}]
 description = Run the unit tests
 extras =
     dev
