--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,11 +35,13 @@ dependencies = [
     'pytray',
     'e3nn-jax',
     "equinox>=0.12.0",
-    "reax~=0.6",
+    "reax>=0.6.2,<0.7",
     "rich",
     "tensorboardX",
     "typing-extensions"
 ]
+[project.scripts]
+tensorial = "tensorial.reaxkit.cli:main_cli"
 
 [project.urls]
 Home = 'https://github.com/camml-lab/tensorial'
