Added sphinx documentation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -53,6 +53,7 @@ docs = [
     'jupyter', # For running doc examples
     'nbsphinx', # Jupyter notebooks in docs
     'pandoc',
+    'pydata_sphinx_theme',
     'sphinx',
     'sphinx-autobuild',
 ]
